k9s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-manager
  namespace: afin-services
  labels:
    app: team-manager
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: team-manager
